# cpaint

./: .gitignore  LICENSE-MIT  README.md  TODO.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  test.html  tsconfig.app.json  vite.config.ts
.github/workflows/: basic-e2e.yml  ci.yml  simple-ci.yml  simple-e2e.yml
cpaint/: Cargo.toml
cpaint/src/: lib.rs
src/: ccanvas.ts  index.css  main.tsx  state.ts  vite-env.d.ts
src/components/: AddImageAsLayer.tsx  App.tsx  BrushPreview.tsx  Canvas.tsx  CanvasArea.tsx  CanvasResize.tsx  ColorPalette.tsx  EffectPreview.tsx  Files.tsx  Header.tsx  ImageDropTarget.tsx  Init._tsx  LayersBar.tsx  MainCanvasArea.tsx  ModalDialog.tsx  OpHistory.tsx  PenPressureDialog.tsx  PerformanceSettings.tsx  PressureCurveEditor.tsx  SelectionControls.tsx  SelectionOverlay.tsx  SettingDialog.tsx  TimelapseDialog.tsx  Toasts.tsx  Toggle.tsx  ToolBar.tsx  Transform.tsx  TransformRectHandles.tsx  UnsavedChangesDialog.tsx  ViewControls.tsx  icons.tsx  slider.tsx
src/hooks/: useBeforeUnload.tsx  useDisableScroll.tsx  useDrawControl.tsx  useGestureControl.tsx  useMouse.tsx  usePointer.tsx  usePointerClick.ts  useStorage.tsx  useUnsavedChangesGuard.tsx  useViewControl.tsx  useViewControlByPointer.tsx  useViewControlByWheel.tsx
src/libs/: MCanvas.ts  Selection.ts  Storage.ts  applyPatches.ts  brash.ts  browser.tsx  brush.ts  bucket.test.ts  bucket.ts  canvasUtil.ts  check.ts  createFill.tsx  geometry.ts  history.ts  imageDiff.test.ts  imageDiff.ts  imageFx.ts  loadImageFile.ts  mCanvas.ts  patch.test.ts  patch.ts  (+8 more)
(+91 files in other folders)
